--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: kfourinline
 Section: games
 Priority: optional
-Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
+Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Daniel Schepler <schepler@debian.org>,
            Sune Vuorela <sune@debian.org>,
            Fathi Boudra <fabo@debian.org>,
@@ -18,8 +18,8 @@ Build-Depends: cmake,
                pkg-kde-tools (>= 0.14)
 Standards-Version: 3.9.5
 Homepage: http://games.kde.org/
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kfourinline.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kfourinline.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-applications/kfourinline.git
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-applications/kfourinline.git
 
 Package: kfourinline
 Architecture: any
