Update build-deps and deps with the info from cmake

--- a/debian/control
+++ b/debian/control
@@ -30,6 +30,7 @@ Build-Depends: cmake (>= 2.8.12~),
                libkf5kdelibs4support-dev (>= 5.15.0~),
                libkf5kio-dev,
                libkf5notifyconfig-dev,
+               libkf5widgetsaddons-dev (>= 5.15.0~),
                libkf5xmlgui-dev (>= 5.15.0~),
                libqt5svg5-dev (>= 5.4),
                pkg-kde-tools (>> 0.15.15),
